# gen_analysis

./: .gitignore  20240716_plan_Amy.docx  404.html  LICENSE  Makefile  README.md  RunOutput.txt  condaenv.u5g455pb.requirements.txt  environment.yml  family_members.json  gen_analysis.css  gen_analysis.env.example  gen_analysis.py  gen_analysisV1.py  gen_analysisV2.py  gen_analysisV3.py  index.html  prompts.json  pyproject.toml  test.py  variant.cpp  variant_description.json  working_openAI_test.py
.github/workflows/: ci.yml
contrib/: 20241004_quickrun_gen_analysisV2.sh  20241112_quickrun_gen_analysis.sh  gen_analysis.css.backup  pandoc.sh  prompts.json  prompts.json.old  readme.md  run_working_openAI_test.sh  slurm_request.sh  slurm_request_open_terminal.sh  symbols.txt  working_openAI_test.py
data/test/: test_file_2.tsv
docs/: mkdocs.yml
docs/docs/: index.md
docs/site/: 404.html  (+1 more)
gen_analysis_module/: __init__.py  ataxia_api_analysis.py  ataxia_api_results.csv  ataxia_api_test.py  ataxia_api_test2.py  ataxia_api_test3.py  color_script.sh  config.py  conversion.py  convert_md_html_pdf.py  dataset.py  features.py  gen_analysis.py  gen_analysisV1.py  gen_analysisV2.py  gen_analysisV3.py  plots.py  prompts.json
genome-analysis-docs/: mkdocs.yml
notebooks/: ataxia_api_analysis.py  ataxia_api_test.py
references/: Chicago_Ataxia_Exome_Gene_List.tsv  Chicago_Ataxia_Exome_Gene_List_2.tsv  README.md  prompts.json.example
search/: search_index.json
test_cases/: extracol.tsv  malformed.tsv
tests/: __init__.py  test_gen_analysis.py  test_gen_analysisV2.py
(+27 files in other folders)
