[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gen_analysis_module"
version = "0.0.1"
description = "analysis of genetic variants"
authors = [
  { name = "Burmeister" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["gen_analysis_module"]
force_sort_within_sections = true

[tool.pytest.ini_options]
# Basic configuration

# Directory to search for tests
testpaths = ["tests"]

# Global options.  removed -q for quiet.  -ra is report all
addopts = "-ra "


# Specify patterns for test discovery
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Configure pytest to ignore some warnings
filterwarnings = [
    "ignore::DeprecationWarning"
]

# Custom markers (can help categorize tests; use @pytest.mark.<marker-name> in your tests)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: marks burn-in tests"
]

# Log format and level
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"